; ModuleID = '/home/carl/AnghaBench/openssl/crypto/store/extr_store_lib.c_OSSL_STORE_INFO_new_NAME.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/store/extr_store_lib.c_OSSL_STORE_INFO_new_NAME.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i8*, i32* }

@OSSL_STORE_INFO_NAME = common dso_local global i32 0, align 4
@OSSL_STORE_F_OSSL_STORE_INFO_NEW_NAME = common dso_local global i32 0, align 4
@ERR_R_MALLOC_FAILURE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_8__* @OSSL_STORE_INFO_new_NAME(i8* %0) #0 {
  %2 = alloca %struct.TYPE_8__*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_8__*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i32, i32* @OSSL_STORE_INFO_NAME, align 4
  %6 = call %struct.TYPE_8__* @store_info_new(i32 %5, i32* null)
  store %struct.TYPE_8__* %6, %struct.TYPE_8__** %4, align 8
  %7 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %8 = icmp eq %struct.TYPE_8__* %7, null
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load i32, i32* @OSSL_STORE_F_OSSL_STORE_INFO_NEW_NAME, align 4
  %11 = load i32, i32* @ERR_R_MALLOC_FAILURE, align 4
  %12 = call i32 @OSSL_STOREerr(i32 %10, i32 %11)
  store %struct.TYPE_8__* null, %struct.TYPE_8__** %2, align 8
  br label %24

13:                                               ; preds = %1
  %14 = load i8*, i8** %3, align 8
  %15 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 0
  store i8* %14, i8** %18, align 8
  %19 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i32 0, i32 1
  store i32* null, i32** %22, align 8
  %23 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  store %struct.TYPE_8__* %23, %struct.TYPE_8__** %2, align 8
  br label %24

24:                                               ; preds = %13, %9
  %25 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  ret %struct.TYPE_8__* %25
}

declare dso_local %struct.TYPE_8__* @store_info_new(i32, i32*) #1

declare dso_local i32 @OSSL_STOREerr(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
